refactor(core): improve logging file path handling for platform independence
In `Logging.java`, replaced `System.getProperty("java.class.path")` with `Paths.get(".", "PWLogs")` for determining the logging directory path.
The new logging path corresponds with the default user directory in Open Liberty and ensures the liberty user can write there.
Introduced `platformSeparator = System.getProperty("file.separator")` in `Logging.java` for cross-platform path construction.
Updated `logDir` creation to use `logsPath.toString()` and `globalFileHandler` to use `logsPath.toAbsolutePath().toString() + platformSeparator + fileName + "-%g"` for consistent file handling.
Imported `java.nio.file.Paths` in `Logging.java`.